Added graph